# mlp

./: .env.example  .gitignore  README.md  create_project_from_yaml.py  dockerfile  main.py  messages_mo_generator.sh  pre-commit-config.yaml  project_structure.yaml  pyproject.toml  pyproject.yaml  requirements.txt  save_sources.bat  save_sources.sh  session_context_md.py  streamlit_app.py  tmp.txt
.github/workflows/: ci.yml
conf/: config.yaml
conf/orchestrators/: config.yaml  data.yaml  eda.yaml  file.yaml  messages.yaml  pipelines.yaml  report.yaml
src/config/: schemas.py
src/datanalysis/: eda_profile.py  eda_summary.py
src/datavisualization/: report_renderer.py
src/evaluation/: metrics.py  splitting.py
src/instrumentation/: bootstrap_logging.py  config_manager.py  data_manager.py  file_manager.py  logger_factory.py  logger_manager.py  logger_manager_structlog.py  logger_mixin.py  messages_manager.py  messages_taxonomy.py
src/mlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modeling/: evaluator.py  pipeline_factory.py
src/orchestrators/: base.py  config.py  data.py  eda.py  file.py  general.py  messages.py  pipelines.py  report.py
src/preprocessing/: reducers.py  samplers.py  selectors.py
src/templates/: base.html.jinja  report.html.jinja  report.md.jinja
src/ui/: app.py  constants.py
streamlit_pages/: eda.py  home.py  pipelines.py  reports.py  utils_runs.py
tests/: conftest.py  test_create_project_from_yaml.py
tests/datanalysis/: test_eda_summary.py
tests/datavisualization/: test_report_renderer.py
(+28 files in other folders)
