[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp"
version = "0.1.0"
description = "ML phases: EDA → Pipelines → Reports with Hydra/Pydantic/Jinja/Streamlit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "mlp-team" }]
license = { text = "MIT" }
dependencies = [
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pydantic>=2.5",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "imbalanced-learn>=0.12",
  "ydata-profiling>=4.6",
  "umap-learn>=0.5",
  "jinja2>=3.1",
  "streamlit>=1.36",
  "mlflow>=2.12",
  "tpot>=0.12",
  "pyyaml>=6.0.1",
  "setuptools>=80.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "B", "UP", "N", "S", "PL", "C90"]
lint.ignore = ["E501"]
extend-exclude = ["outputs", ".venv", ".git", "build", "dist"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
exclude = "(outputs|.venv|build|dist|.git)/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
